--- a/django_project/first_app/home/templates/index.html
+++ b/django_project/first_app/home/templates/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
-Hello world this is django
-</body>
+<p>Hello world this is django</p>
+<p>{{hello_message}}</p>
+<p>{{request}}</p>
 </html>
