--- a/django_project/first_app/home/templates/index.html
+++ b/django_project/first_app/home/templates/index.html
@@ -1,5 +1,9 @@
 <html>
-<p>Hello world this is django</p>
+
 <p>{{ hello_message }}</p>
-<p>{{request}}</p>
+
+<form action="" method="" accept-charset="utf-8"></form>
+
+{{ form.as_p }}
+<p><input type ="submit" value="Register"></p>
 </html> 
