--- a/django_project/first_app/home/templates/index.html
+++ b/django_project/first_app/home/templates/index.html
@@ -2,8 +2,11 @@
 
 <p>{{ hello_message }}</p>
 
-<form action="" method="" accept-charset="utf-8"></form>
+<form action="" method="post" accept-charset="utf-8">
+{% csrf_token %}
 
 {{ form.as_p }}
 <p><input type ="submit" value="Register"></p>
+</form>
+
 </html> 
