--- a/django_project/first_app/home/templates/feedback.html
+++ b/django_project/first_app/home/templates/feedback.html
@@ -23,5 +23,8 @@
 {{ form.as_p }}
 <p><input type ="submit" value="Give Feedback"></p>
 </form>
-
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src='{% static "js/bootstrap.min.js" %}'></script>
 </html> 
