--- a/django_project/first_app/home/templates/students.html
+++ b/django_project/first_app/home/templates/students.html
@@ -18,7 +18,7 @@
     <![endif]-->
   </head>
 <body>
-    <p>Put students here</p>
+        <p>{{students}}</p>
 </body>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
