--- a/django_project/first_app/home/templates/students.html
+++ b/django_project/first_app/home/templates/students.html
@@ -18,19 +18,27 @@
     <![endif]-->
   </head>
 <body>
-        {% for student in students%}
-            {{student.full_name}}
-        {% endfor %}
 
 <table class="table">
-    <tr><th>Fullname</th></tr>
-    <tr><th>Age</th></tr>
-    <tr><th>Email</th></tr>
-    <tr><th>Interests</th></tr>
-    <tr><th>Data</th></tr>
-</table>
+    <tr>
+    <th>Fullname</th>
+    <th>Age</th>
+    <th>Email</th>
+    <th>Interests</th>
+    </tr>
 
-        <p>{{students}}</p>
+
+        {% for student in students%}
+        <tr>
+        <td>{{student.full_name}}</td>
+        <td>{{student.age}}</td>
+        <td>{{student.email}}</td>
+        <td>{{student.inerests}}</td>
+        </tr>
+
+        {% endfor %}
+
+</table>
 </body>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
