--- a/django_project/first_app/home/templates/students.html
+++ b/django_project/first_app/home/templates/students.html
@@ -1,23 +1,5 @@
-<html>
-<head>
-{% load staticfiles %}
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Registered student</title>
-
-    <!-- Bootstrap -->
-    <link href='{% static "css/bootstrap.min.css" %}'rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 <p>Welcome {{request.user}}</p>
 <table class="table">
     <tr>
@@ -44,8 +26,5 @@
 
 </table>
 </body>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src='{% static "js/bootstrap.min.js" %}'></script>
-</html> 
+
+{% endblock %}
