--- a/django_project/first_app/templates/home.html
+++ b/django_project/first_app/templates/home.html
@@ -1,3 +1,5 @@
+      {% extends "base.html" %}
+      {% block content %}
       <div class="jumbotron">
         <h1>Jumbotron heading</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
@@ -27,3 +29,4 @@
           <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
         </div>
       </div>
+{% endblock %}
