--- a/django_project/first_app/templates/bootstrap/base.html
+++ b/django_project/first_app/templates/bootstrap/base.html
@@ -32,7 +32,7 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="/">Home</a></li>
+            <li role="presentation" {%block home_active %} {% endblock %}class="active"><a href="/">Home</a></li>
             <li role="presentation"><a href="/students">students</a></li>
             <li role="presentation"><a href="/feedback">Contact</a></li>
           </ul>
