--- a/django_project/first_app/home/templates/students.html
+++ b/django_project/first_app/home/templates/students.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{%block students_active %} class="active" {% endblock %}
 {% block content %}
 <p>Welcome {{request.user}}</p>
 <table class="table">
